= master

* Implement the match_hooks plugin using the match_hook_args plugin (jeremyevans)

= 3.71.0 (2023-08-14)

* Add match_hook_args plugin, similar to match_hooks but support matchers and block args as hook arguments (jeremyevans)

= 3.70.0 (2023-07-12)

* Add plain_hash_response_headers plugin, using a plain hash for response headers on Rack 3 for much better performance (jeremyevans)

* Use lower case response header keys by default on Rack 3, instead of relying on Rack::Headers conversion (jeremyevans)

= 3.69.0 (2023-06-13)

* Allow symbol_matcher in symbol_matchers plugin to take a block to allow type conversion (jeremyevans)

= 3.68.0 (2023-05-11)

* Make Roda.run in multi_run plugin accept blocks to allow autoloading the apps to dispatch to (jeremyevans)

= 3.67.0 (2023-04-12)

* Add custom_block_results plugin for registering custom block result handlers (jeremyevans)

= 3.66.0 (2023-03-13)

* Support overriding exception page assets via exception_page_{css,js} instance methods (jeremyevans) (#306)

* Avoid keeping reference to Roda instance that caches an inline template (jeremyevans)

* Add render_coverage plugin, using tilt 2.1 features to allow for compiled templates in Ruby <3.2 (jeremyevans)

= 3.65.0 (2023-02-13)

* Make indifferent_params plugin work with changes in rack main branch (jeremyevans)

* Add autoload_named_routes plugin for autoloading file for a named route when there is a request for that route (jeremyevans)

* Make path method in path plugin accept class name string/symbol with :class_name option to register classes without forcing autoloads (jeremyevans)

= 3.64.0 (2023-01-12)

* Automatically expand paths for autoload_hash_branches files, so that relative paths work (jeremyevans)

* Make autoload_hash_branches plugin eagerly load the branches when freezing the application (jeremyevans)

* Add erb_h plugin for faster (if slightly less safe) html escaping using erb/escape (jeremyevans)

= 3.63.0 (2022-12-16)
