@@ -88,6 +88,7 @@ class Roda
           end
           call_meth = meth
 
+          # RODA4: Switch to false # :warn in last Roda 3 version
           if (check_arity = opts.fetch(:check_arity, true)) && !block.lambda?
             required_args, optional_args, rest, keyword = _define_roda_method_arg_numbers(block)
 
@@ -117,6 +118,9 @@ class Roda
                 alias_method meth, meth
                 meth = :"#{meth}_arity"
               elsif required_args > 1
+                if check_arity == :warn
+                  RodaPlugins.warn "Arity mismatch in block passed to define_roda_method. Expected Arity 1, but multiple arguments required for #{block.inspect}"
+                end
                 b = block
                 block = lambda{|r| instance_exec(r, &b)} # Fallback
               end
